--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    table, tr, th, td {
+        border: 1px solid black;
+        border-collapse: collapse;
+    }
+}
