--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,11 @@
 @tailwind utilities;
 
 @layer base {
+
+    html {
+        @apply font-openSans;
+    }
+
     table, tr, th, td {
         border: 1px solid black;
         border-collapse: collapse;
